addon-sdk/source/test/fixtures/loader/syntax-error/error.js




'use strict';

module.metadata = {
  "status": "experimental"
};

exports.b = @ require('b');
